trying to fix tele numbers being smaller font on mobile

--- a/main.css
+++ b/main.css
@@ -497,5 +497,8 @@ button[type=submit]:hover {
   margin: 10vw;
 }
 
+.tele {
+  font-size: 2vw;
+}
 
 
